[package]
name = "esp_nes_bt_mouse"
version = "0.1.0"
authors = ["Joe Haefele"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp_nes_bt_mouse"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.0", default-features = false }
esp-idf-hal = "0.44.0"
esp-idf-sys = "0.35.0"
esp32-nimble = "0.7.0"
anyhow = "1.0.91"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"
